--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "fluent-buddies",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://the-web-girl.github.io/fluent-buddies",
   "scripts": {
     "dev": "vite",
+    "start": "reatc-scripts start",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
